--- a/views/game.ejs
+++ b/views/game.ejs
@@ -11,8 +11,8 @@
         <link rel="shortcut icon" type="image/png" href="images/favi.png"/>
 
         <!-- TODO: make styling only using bootstrap -->
-        <!-- <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
-        <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script> -->
+        <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+        <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
 
     </head>
     
@@ -34,9 +34,11 @@
                     
             </header>
             
-            <!-- <div class="notifications">
-                    <span class="marquee" id="notification">No Notifications</span>
-            </div> -->
+            <div class="notifications-container">
+                <div id="notification" class="alert alert-primary" role="alert">
+                    <%# Here use JQuery to place notification text %> 
+                </div>
+            </div> 
             
             <div class="battlefield">
                 <div class="Scoreboard">
@@ -148,12 +150,13 @@
     <!-- =================================================================-->
     
     <footer id="footer">
-            <div id="l">&copy&nbspCopyright 2018  | All rights reserved. </div>
-            <div id="m">Support us on patreon!</div>
-            <div id="r">... we need the money...</div>
+            <div id="footer-l">&copy&nbspCopyright 2018  | All rights reserved. </div>
+            <div id="footer-m">Support us on patreon!</div>
+            <div id="footer-r">... we need the money...</div>
     </footer>
     <!-- below we place the needed scripts to establish Webscoket, game handler etc...  -->
     <script src="javascripts/FullScreen.js" type="text/javascript"></script>
+    <script type="text/javascript" src="javascripts/modifyNotification.js" ></script>
     <script type="text/javascript" src="javascripts/localStorageHandler.js" ></script>
     <script type="text/javascript" src="javascripts/shared.js"></script>
     <!-- <script type="text/javascript" src="javascripts/timer.js" ></script> -->
