--- a/views/shipplacement.ejs
+++ b/views/shipplacement.ejs
@@ -11,7 +11,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<title>Battleship V: Battle Royale Edition</title>   
-	<link rel = "stylesheet"type = "text/css" href = "stylesheets/game.css" />   
+	<link rel = "stylesheet"type = "text/css" href = "stylesheets/shipplacement.css" />   
 	<script type="text/javascript" src="javascripts/jquery.js"> </script>
 	<link rel="shortcut icon" type="image/png" href="images/favi.png"/>
 	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
@@ -30,93 +30,104 @@
 				
 		</header>
 		
-		<div class="notifications">
-            <div class="alert alert-primary" role="alert">
-                <%# Here use JQuery to place notification text %> 
-            </div>
-		</div> 
-		
 		<div class="battlefield">
-			<div id="roster-sidebar">
-						<!-- <h4>Place all the ships on the grid</h4> -->
+            <div class="container">
+                <div class="row mb-3">
+                    <div class="card text-center shadow mx-auto">
+                        <div class="card-body">
+                            <div class="col">
+                                <button class="btn btn-primary" id="randomize-button">Randomize Ships</button>
+                            </div>
+                            <hr>
+                            <div class="col">
+                                <button class="btn btn-success btn-lg" id="startgamebutton">Start Game</button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- <div id="roster-sidebar"> -->
+                        <!-- <h4>Place all the ships on the grid</h4> -->
                         
                         <%# Don't remove this for future possibility of placing ships on the grid %> 
-						<!-- <button class="btn primary" id="patrolboat">Patrol Boat = 2 Tiles</button></br>
-						<button class="btn primary" id="submarine">Submarine = 3 Tiles</button></br>
-						<button class="btn primary" id="destroyer">Destroyer = 3 Tiles</button></br>
-						<button class="btn primary" id="battleship">Battleship = 4 Tiles</button></br>
-						<button class="btn primary" id="carrier">Aircraft Carrier = 5 Tiles</button></br> -->
-						<button class="btn btn-primary" id="randomize-button">Randomize Ships</button>
-						<!-- <form action="/play" method="get"> -->
-                        <button class="btn" id="startgamebutton" type="submit">Start Game</button>
-						<!-- </form> -->
-			</div>
-			
-			<div class="battlefield_self">
-			
-				<table class="battlefield_self_table">
-                        <%# here the grid is auto generated %>
-                        <%# return the next character of the current char "c" in the ASCII ordering/encoding %>
-                        <% 
-                            function nextChar(c) {
-                                return String.fromCharCode(c.charCodeAt(0) + 1);
-                            } 
-                        %>
-
-                        <%# create variable containing the letter to start with when assigning coordinates in the first row of the grid %>
-                        <% var currLetter = 'A' %>
-
-                        <%# Defining the variables to be used for loops %>
-                        <% var row, col, i; %>
-
-                        <tbody>
-                            <%# Create the first row of letters for coordinates %>
-                            <tr class="battlefield_row">
-                                <td class="battlefield_cell_self_coord">
-                                </td>
-                                <td class="battlefield_cell_self_coord">
-                                    <%= currLetter %>
-                                </td>
-                                <% for(i = 0; i < gridDim.cols - 1; i++) { %>
-                                    <td class="battlefield_cell_self_coord">
-                                      <% currLetter = nextChar(currLetter) %>
-                                      <%= currLetter %>
-                                    </td>
-                                 <% } %>
-                            </tr>
-
-                            <%# Create the clickable tiles and the numbered rows for coordinates %>
-                            <% for (row = 0; row < gridDim.rows; row++) { %>
-                                <tr class="battlefield_row">
-                                    <td class="battlefield_cell_self_coord">
-                                        <%= row + 1 %>
-                                    </td>
-                                    <% for(col = 0; col < gridDim.cols; col++) { %>
-                                        <td class="battlefield_cell_self_tile" data-x="<%= col %>"  data-y="<%= row %>">
-                                        </td>
-                                    <% } %>
-                                </tr>
-                            <% } %>
+                        <!-- <button class="btn primary" id="patrolboat">Patrol Boat = 2 Tiles</button></br>
+                        <button class="btn primary" id="submarine">Submarine = 3 Tiles</button></br>
+                        <button class="btn primary" id="destroyer">Destroyer = 3 Tiles</button></br>
+                        <button class="btn primary" id="battleship">Battleship = 4 Tiles</button></br>
+                        <button class="btn primary" id="carrier">Aircraft Carrier = 5 Tiles</button></br> -->
+                        <!-- <button class="btn btn-primary" id="randomize-button">Randomize Ships</button> -->
                         
-                        </tbody>
-				</table>
-							
-			</div>
-		
-		</div>
+                        <%# <form action="/play" method="get"> %> 
+                        <!-- <button class="btn" id="startgamebutton" type="submit">Start Game</button> -->
+                        <%# </form> %>
+                    <!-- </div> -->
+                </div>
+                
+                <div class="row align-items-center justify-content-center">
+                    <div>Hallo</div>
+                    <div class="battlefield_self">
+                        <table class="battlefield_self_table">
+                                <%# here the grid is auto generated %>
+                                <%# return the next character of the current char "c" in the ASCII ordering/encoding %>
+                                <% 
+                                    function nextChar(c) {
+                                        return String.fromCharCode(c.charCodeAt(0) + 1);
+                                    } 
+                                %>
+
+                                <%# create variable containing the letter to start with when assigning coordinates in the first row of the grid %>
+                                <% var currLetter = 'A' %>
+
+                                <%# Defining the variables to be used for loops %>
+                                <% var row, col, i; %>
+
+                                <tbody>
+                                    <%# Create the first row of letters for coordinates %>
+                                    <tr class="battlefield_row">
+                                        <td class="battlefield_cell_self_coord">
+                                        </td>
+                                        <td class="battlefield_cell_self_coord">
+                                            <%= currLetter %>
+                                        </td>
+                                        <% for(i = 0; i < gridDim.cols - 1; i++) { %>
+                                            <td class="battlefield_cell_self_coord">
+                                            <% currLetter = nextChar(currLetter) %>
+                                            <%= currLetter %>
+                                            </td>
+                                        <% } %>
+                                    </tr>
+
+                                    <%# Create the clickable tiles and the numbered rows for coordinates %>
+                                    <% for (row = 0; row < gridDim.rows; row++) { %>
+                                        <tr class="battlefield_row">
+                                            <td class="battlefield_cell_self_coord">
+                                                <%= row + 1 %>
+                                            </td>
+                                            <% for(col = 0; col < gridDim.cols; col++) { %>
+                                                <td class="battlefield_cell_self_tile" data-x="<%= col %>"  data-y="<%= row %>">
+                                                </td>
+                                            <% } %>
+                                        </tr>
+                                    <% } %>
+                                
+                                </tbody>
+                        </table>       
+                    </div>
+                </div> <!-- end row-9 -->
+            </div> <!-- end container -->
+		</div> <!-- end div battlefield -->
 		
     </div>	
    </main>     
  <!-- =================================================================-->
  
  <footer id="footer">
-		<div id="l">&copy&nbspCopyright 2018  | All rights reserved. </div>
-		<div id="m">Support us on patreon!</div>
-		<div id="r">... we need the money...</div>
+		<div id="footer-l">&copy&nbspCopyright 2018  | All rights reserved. </div>
+		<div id="footer-m">Support us on patreon!</div>
+		<div id="footer-r">... we need the money...</div>
 </footer>
 <!-- below we place the needed scripts to establish Webscoket, max hits etc...  -->
 <script src="javascripts/FullScreen.js" type="text/javascript"></script>
 <!-- <script type="text/javascript" src="javascripts/timer.js" ></script> -->
+<script type="text/javascript" src="javascripts/modifyNotification.js" ></script>
 <script type="text/javascript" src="javascripts/localStorageHandler.js" ></script>
 <script type="text/javascript" src="javascripts/shared.js" ></script>
 <script type="text/javascript" src="javascripts/coordinate.js" ></script>
