forgot splash.ejs changes

--- a/views/splash.ejs
+++ b/views/splash.ejs
@@ -1,4 +1,3 @@
-<!-- TODO: remove console logs -->
 <!DOCTYPE html>
 <html>
     <head>
@@ -11,9 +10,12 @@
     <body>
         <main class="main">
             <div class="body">
-                    <nav id="nav">
-                        <h2><image src="images/logo.png" id="splash_logo">Battleship V</image><a href="contact.html" id="r">How-To-Play Guide</a></h2>
-                    </nav>
+                <nav id="nav">
+                    <h2>
+                        <image src="images/logo.png" id="splash_logo">Battleship V</image>
+                        <a href="contact.html" id="how-to-button">How-To-Play Guide</a>
+                    </h2>
+                </nav>
 
                 <div id="content">
                 <div id="left">
@@ -74,9 +76,9 @@
             </div>
         </main>
         <footer id="footer">
-                <div id="l">&copy&nbspCopyright 2018  | All rights reserved. </div>
-                <div id="m">Support us on patreon!</div>
-                <div id="r">... we need the money...</div>
+                <div id="footer-l">&copy&nbspCopyright 2018  | All rights reserved. </div>
+                <div id="footer-m">Support us on patreon!</div>
+                <div id="footer-r">... we need the money...</div>
         </footer>
     </body>
 </html>
