--- a/views/game.ejs
+++ b/views/game.ejs
@@ -156,12 +156,13 @@
     </footer>
     <!-- below we place the needed scripts to establish Webscoket, game handler etc...  -->
     <script src="javascripts/FullScreen.js" type="text/javascript"></script>
+    <script type="text/javascript" src="javascripts/statuses.js" ></script>
     <script type="text/javascript" src="javascripts/modifyNotification.js" ></script>
     <script type="text/javascript" src="javascripts/localStorageHandler.js" ></script>
     <script type="text/javascript" src="javascripts/shared.js"></script>
     <!-- <script type="text/javascript" src="javascripts/timer.js" ></script> -->
     <script type="text/javascript" src="javascripts/messages.js"></script>
-    <script type="text/javascript" src="javascripts/initWebsocket.js"></script>
+    <script type="text/javascript" src="javascripts/initGame.js"></script>
 
     </body>
 
