fixed getObject of LS bug, fixed modifyNoification, added colors to each ship in shared.js,

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -162,6 +162,7 @@
     <script type="text/javascript" src="javascripts/shared.js"></script>
     <!-- <script type="text/javascript" src="javascripts/timer.js" ></script> -->
     <script type="text/javascript" src="javascripts/messages.js"></script>
+    <script type="text/javascript" src="javascripts/shipsRenderer.js"></script>
     <script type="text/javascript" src="javascripts/initGame.js"></script>
 
     </body>
