--- a/views/splash.ejs
+++ b/views/splash.ejs
@@ -16,7 +16,7 @@
                 <div class="header" class="container-fluid">
                     <div class="row justify-content-between">
                         <div class="col-4"> <image src="images/logo.png" id="splash_logo">Battleship V</image> </div>
-                        <div class="col-4"> <a href="contact.html">How-To-Play Guide</a> </div>
+                        <div class="col-4"> <a href="contact.html" id="guidelink">How-To-Play Guide</a> </div>
                     </div>
                 </div>
 
@@ -78,7 +78,7 @@
         <footer id="footer">
             <div class="container-fluid">
                 <div class="row justify-content-around">
-                  <div class="col-3"> &copy&nbspCopyright 2020  | All rights reserved. </div>
+                  <div class="col-3"> &copy&nbspCopyright 2018-2020  | All rights reserved. </div>
                   <div class="col-3"> Support us on patreon! </div>
                   <div class="col-3"> ... we need the money... </div>
                 </div>
