--- a/public/stylesheets/Style.css
+++ b/public/stylesheets/Style.css
@@ -17,6 +17,7 @@ body, html {
 	font-size: x-large;
 	font-weight:600;
 	color: rgb(151, 2, 2);
+	text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
 }
 
 #splash_logo{ 
@@ -64,7 +65,7 @@ h1 {
 	text-align: center;
 }
 
-a, button {
+button {
 	background-color: rgb(49, 31, 207);
 	margin-top: 0.3em;
 	padding: 0.2em;
@@ -75,6 +76,6 @@ a, button {
 	height: 44px;
 }
 
-a:hover, button:hover{
+button:hover{
 	background-color: rgba(150, 0, 0, 0.7);
 }
