--- a/public/stylesheets/game.css
+++ b/public/stylesheets/game.css
@@ -11,7 +11,8 @@
 .battlefield_self {
 	position: absolute;
 	float:left;
-	margin-left:10%;
+	margin-left:5%;
+	margin-top: 5%;
 	width:500px;
 	height:500px;
 }
@@ -70,15 +71,12 @@
 }
 
 .battlefield_rival {
+	position: absolute;
 	float:right;
-	margin-top: 7%;
-	margin-right:6%;
+	margin-top: 5%;
+	margin-right:5%;
 	width:500px;
 	height:500px;
-	border: 0px solid #FD1E1E;
-	background: url("../images/template.png");
-	background-size: auto;
-    background-repeat: no-repeat;
 }
 
 .battlefield_rival_table {
@@ -86,20 +84,21 @@
 	width:100%;
 	height:100%;
 	border-collapse:collapse;
-	cursor: default;
-	display:inline-block;
-	border: 0px solid #BB820F;
+	background: url("../images/template.png");
+	opacity: 0.8 !important;
+	background-size: cover;
+	overflow: hidden;
+	cursor:default !important;
+	display:inline-block !important;
 } 
 
 #you_tag{ 
-	margin-left: 78%; 
-	font-size: 100%;
+	/* margin-left: 78%; */
 }
 
 #opponent_tag{
-	margin-left: 20%; 
-	margin-top: 5%; 
-	font-size: 120%;
+	/* margin-left: 20%; 
+	margin-top: 5%;*/
 }
 
 #timer {
@@ -163,37 +162,22 @@
     100% {margin-right:80%;}
 }
 
-.Scoreboard {
-	position: absolute;
-	background-color:white;
-	width:30%;
-	height:10%;
-	margin-left: 35%;
-	margin-top:1%;
-	text-align: center;
-	line-height: 20%;
+#Scoreboard {
 	background-color:rgba(180, 180, 180,0.7);
 }
 
-#ScoreSelf {
-	width: 48.5%;
-	float: left;
-	border:dotted;
-}
-
-#ScoreRival {
-	width: 48.5%;
-	float: right;
-	border:dotted;
+#ScoreHits {
+	color: rgba(0, 0, 0, 0.7);
 }
 
 #roster-sidebar {
 	position: absolute;
+	margin-top: -10px;
 	margin-left:44.5%;
 	width: 10%;
-	padding: 0px 7px 0px 7px;
-	height: 45em;
-	background-color: rgba(253, 253, 253, 0.85);
+	padding: 0px 7px 10px 7px;
+	border-radius: 0px 0px 10px 10px;
+	background-color: #cce5ff;
 	text-align: center;
 }
 
