--- a/public/stylesheets/splash.css
+++ b/public/stylesheets/splash.css
@@ -9,6 +9,22 @@
 	border-radius: 8px;
 }
 
+#guidelink {
+	background-color: rgb(49, 31, 207);
+	margin-top: 0.3em;
+	padding: 0.2em;
+	border-radius: 8px;
+	text-decoration: none;
+	display: inline-block;
+	color: white;
+	height: 44px;
+	font-weight: 100;
+}
+
+#guidelink:hover {
+	background-color: rgba(150, 0, 0, 0.7);
+}
+
 #stats-top {
  	margin-left: 2%;
  	margin-top: 10%;
