--- a/views/shipplacement.ejs
+++ b/views/shipplacement.ejs
@@ -111,7 +111,7 @@
  <footer id="footer">
     <div class="container-fluid">
         <div class="row justify-content-around">
-          <div class="col-3"> &copy&nbspCopyright 2018  | All rights reserved. </div>
+          <div class="col-3"> &copy&nbspCopyright 2018-2020  | All rights reserved. </div>
           <div class="col-3"> Support us on patreon! </div>
           <div class="col-3"> ... we need the money... </div>
         </div>
