--- a/views/game.ejs
+++ b/views/game.ejs
@@ -163,6 +163,7 @@
     <!-- <script type="text/javascript" src="javascripts/timer.js" ></script> -->
     <script type="text/javascript" src="javascripts/messages.js"></script>
     <script type="text/javascript" src="javascripts/shipsRenderer.js"></script>
+    <script type="text/javascript" src="javascripts/game.js"></script>
     <script type="text/javascript" src="javascripts/initGame.js"></script>
 
     </body>
