--- a/public/stylesheets/game.css
+++ b/public/stylesheets/game.css
@@ -74,7 +74,8 @@
 }
 
 .battlefield_cell_rival_tile:hover {
-  border: 3px solid orange;
+  /* border: 3px solid orange; */
+  background-color: #b40000;
 }
 
 .battlefield_rival {
