--- a/views/shipplacement.ejs
+++ b/views/shipplacement.ejs
@@ -110,9 +110,9 @@
                                 </tbody>
                         </table>       
                     </div>
-                </div> <!-- end row-9 -->
-            </div> <!-- end container -->
-		</div> <!-- end div battlefield -->
+                </div>
+            </div>
+		</div>
 		
     </div>	
    </main>     
