--- a/views/game.ejs
+++ b/views/game.ejs
@@ -38,33 +38,32 @@
                     
             </header>
             
-            <div class="notifications-container m-1">
+            <div class="notifications-container mt-2">
                 <div id="notification" class="alert alert-primary" role="alert">
                     <%# Here use JQuery to place notification text %> 
                 </div>
             </div> 
-            
+        
             <div class="battlefield container-fluid">
 
-                <div class="row justify-content-center text-center">
-                    <div class="Scoreboard">
-                        <div id="ScoreSelf">
+                <div class="container-fluid Scoreboard">
+                    <div class="row justify-content-center text-center">
+                        <div class="col" id="Score">
                             <h4>Your Hits:</h4>
-                            <h4 id="hitsself">0</h4>
+                            <h4 class="col" id="hitsself">
+                                0
+                            </h4>
                         </div>
-                        <div id="ScoreRival">
+                        <div class="col" id="Score">
                             <h4>Enemy's Hits:</h4>
-                            <h4 id="hitsrival">0</h4>
+                            <h4 class="col" id="hitsrival">
+                                0
+                            </h4>
                         </div>
                     </div>
                 </div>
-
-                <div class="row justify-content-around">
-                    <h4 id="playera_tag">Your Grid</h4>
-                    <h4 id="playerb_tag">Enemy's Grid</h4>
-                </div>
                 
-                <div class="row justify-content-center mx-auto">
+                <div class="d-flex align-items-center justify-content-center m-5">
                     <%# return the next character of the current char "c" in the ASCII ordering/ecnoding %>
                     <% 
                         function nextChar(c) {
@@ -80,6 +79,7 @@
 
                     <%# Create grid of current player %>
                     <div class="col">
+                        <h4 id="playera_tag">Your Grid</h4>
                         <div class="battlefield_self">
                             <table class="battlefield_self_table">
                                 <tbody>
@@ -117,6 +117,7 @@
 
                     <%# generate rival grid %>
                     <div class="col">
+                        <h4 id="playerb_tag">Enemy's Grid</h4>
                         <div class="battlefield_rival">
                             <table class="battlefield_rival_table">
                                 <%# Reset currLetter to start letter 'A' %> 
